[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/TileMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Enemies/BlackMage/BlackMage.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Cutscenes/CutscenePlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Cutscenes/DialogBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Cutscenes/EndCutscene.gd" type="Script" id=5]
[ext_resource path="res://Scenes/SpellAnimations/a_DarkBell.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Fade"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "FinalFade"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[node name="EndCutscene" type="Node2D"]
script = ExtResource( 5 )

[node name="TileMap" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( 0, 4, 0, 2, 4, 0, 4, 4, 0, 6, 4, 0, 8, 4, 0, 10, 4, 0, 12, 4, 0, 14, 4, 0, 16, 4, 0, 18, 4, 0, 20, 4, 0, 22, 4, 0, 24, 4, 0, 26, 4, 0, 28, 4, 0, 30, 4, 0, 32, 4, 0, 34, 4, 0, 36, 4, 0, 38, 4, 0, 65536, 0, 0, 65538, 0, 0, 65540, 0, 0, 65542, 0, 0, 65544, 0, 0, 65546, 0, 0, 65548, 0, 0, 65550, 0, 0, 65552, 0, 0, 65554, 0, 0, 65556, 0, 0, 65558, 0, 0, 65560, 0, 0, 65562, 0, 0, 65564, 0, 0, 65566, 0, 0, 65568, 0, 0, 65570, 0, 0, 65572, 0, 0, 65574, 0, 0, 196608, 0, 0, 196610, 0, 0, 196612, 0, 0, 196614, 0, 0, 196616, 0, 0, 196618, 0, 0, 196620, 0, 0, 196622, 0, 0, 196624, 0, 0, 196626, 0, 0, 196628, 0, 0, 196630, 0, 0, 196632, 0, 0, 196634, 0, 0, 196636, 0, 0, 196638, 0, 0, 196640, 0, 0, 196642, 0, 0, 196644, 0, 0, 196646, 0, 0, 327680, 0, 0, 327682, 0, 0, 327684, 0, 0, 327686, 0, 0, 327688, 0, 0, 327690, 0, 0, 327692, 0, 0, 327694, 0, 0, 327696, 0, 0, 327698, 0, 0, 327700, 0, 0, 327702, 0, 0, 327704, 0, 0, 327706, 0, 0, 327708, 0, 0, 327710, 0, 0, 327712, 0, 0, 327714, 0, 0, 327716, 0, 0, 327718, 0, 0, 458752, 0, 0, 458754, 0, 0, 458756, 0, 0, 458758, 0, 0, 458760, 0, 0, 458762, 0, 0, 458764, 0, 0, 458766, 0, 0, 458768, 0, 0, 458770, 0, 0, 458772, 0, 0, 458774, 0, 0, 458776, 0, 0, 458778, 0, 0, 458780, 0, 0, 458782, 0, 0, 458784, 0, 0, 458786, 0, 0, 458788, 0, 0, 458790, 0, 0, 589824, 0, 0, 589826, 0, 0, 589828, 0, 0, 589830, 1, 0, 589833, 0, 0, 589835, 0, 0, 589837, 0, 0, 589839, 0, 0, 589841, 0, 0, 589843, 0, 0, 589845, 0, 0, 589847, 0, 0, 589849, 0, 0, 589851, 0, 0, 589853, 0, 0, 589855, 1, 0, 589858, 0, 0, 589860, 0, 0, 589862, 0, 0, 720896, 0, 0, 720898, 0, 0, 720900, 0, 0, 720905, 0, 0, 720907, 0, 0, 720909, 0, 0, 720911, 0, 0, 720913, 0, 0, 720915, 0, 0, 720917, 0, 0, 720919, 0, 0, 720921, 0, 0, 720923, 0, 0, 720925, 0, 0, 720930, 0, 0, 720932, 0, 0, 720934, 0, 0, 786438, 3, 0, 786439, 3, 0, 786463, 3, 0, 786464, 3, 0, 851968, 0, 0, 851970, 0, 0, 851972, 0, 0, 851974, 0, 0, 851976, 0, 0, 851978, 0, 0, 851980, 0, 0, 851982, 0, 0, 851984, 0, 0, 851986, 0, 0, 851988, 0, 0, 851990, 0, 0, 851992, 0, 0, 851994, 0, 0, 851996, 0, 0, 851998, 0, 0, 852000, 0, 0, 852002, 0, 0, 852004, 0, 0, 852006, 0, 0, 983040, 0, 0, 983042, 0, 0, 983044, 0, 0, 983046, 0, 0, 983048, 0, 0, 983050, 0, 0, 983052, 0, 0, 983054, 0, 0, 983056, 0, 0, 983058, 0, 0, 983060, 0, 0, 983062, 0, 0, 983064, 0, 0, 983066, 0, 0, 983068, 0, 0, 983070, 0, 0, 983072, 0, 0, 983074, 0, 0, 983076, 0, 0, 983078, 0, 0, 1114112, 0, 0, 1114114, 0, 0, 1114116, 0, 0, 1114118, 0, 0, 1114120, 0, 0, 1114122, 0, 0, 1114124, 0, 0, 1114126, 0, 0, 1114128, 0, 0, 1114130, 0, 0, 1114132, 0, 0, 1114134, 0, 0, 1114136, 0, 0, 1114138, 0, 0, 1114140, 0, 0, 1114142, 0, 0, 1114144, 0, 0, 1114146, 0, 0, 1114148, 0, 0, 1114150, 0, 0, 1245184, 0, 0, 1245186, 0, 0, 1245188, 0, 0, 1245190, 0, 0, 1245192, 0, 0, 1245194, 0, 0, 1245196, 0, 0, 1245198, 0, 0, 1245200, 0, 0, 1245202, 0, 0, 1245204, 0, 0, 1245206, 0, 0, 1245208, 0, 0, 1245210, 0, 0, 1245212, 0, 0, 1245214, 0, 0, 1245216, 0, 0, 1245218, 0, 0, 1245220, 0, 0, 1245222, 0, 0, 1376256, 4, 0, 1376258, 4, 0, 1376260, 4, 0, 1376262, 4, 0, 1376264, 4, 0, 1376266, 4, 0, 1376268, 4, 0, 1376270, 4, 0, 1376272, 4, 0, 1376274, 4, 0, 1376276, 4, 0, 1376278, 4, 0, 1376280, 4, 0, 1376282, 4, 0, 1376284, 4, 0, 1376286, 4, 0, 1376288, 4, 0, 1376290, 4, 0, 1376292, 4, 0, 1376294, 4, 0 )

[node name="CutscenePlayer" parent="." instance=ExtResource( 3 )]
position = Vector2( 508.231, 596.868 )
frame = 4
playing = true

[node name="DialogBox" parent="." instance=ExtResource( 4 )]
margin_left = 254.959
margin_top = 108.966
margin_right = 1044.96
margin_bottom = 302.966

[node name="FadeBlackMage" type="Node2D" parent="."]

[node name="BlackMage" parent="FadeBlackMage" instance=ExtResource( 2 )]
position = Vector2( 812.083, 518.414 )
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeBlackMage"]
anims/Fade = SubResource( 1 )

[node name="DarkBell" parent="." instance=ExtResource( 6 )]
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FinalFade = SubResource( 2 )
[connection signal="end_of_dialog" from="DialogBox" to="." method="_on_DialogBox_end_of_dialog"]
[connection signal="animation_finished" from="DarkBell" to="." method="_on_DarkBell_animation_finished"]
